[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "replit_keep_alive"
version = "0.0.1"
authors = [
  { name="Rafael Bachourian", email="bachourian@gmail.com" },
]
description = "Keep you replit app running"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Reathe/replit_keep_alive"
"Bug Tracker" = "https://github.com/Reathe/replit_keep_alive/issues"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]

[tool.isort]
profile = "black"